﻿Change Log
==========

1.0.8
-----

Changed
- Bug Fixes
 - Some SPARQL parsers did not handle bad URIs gracefully i.e. did not provide informative errors (CORE-432)
 - SPARQL CSV parser reject variable names in header row if CSV quoted values are used (CORE-433)
 - Accessing remote SPARQL endpoints could fail to include default & named graph parameters if POSTing the queries (CORE-434)
 - Lazy query evaluation can cause an apparent infinite loop (i.e. extremely slow query evaluation) in some cases (CORE-439)
 - Fix typo in MIME type definitions for NTriples
 - Fix bug where HAVING clause that used aggregates could fail to evaluate correctly if project expressions were also used (CORE-440)
 - Fix bug in evaluation of the zero length portion of * paths causing incorrect results (CORE-441)
- Build
 - Upgrade PCL build to Profile 328
- Dependencies
 - Upgrade VDS.Common to 1.5.0
 - Upgrade Json.Net to 6.0.8

1.0.7
-----

Changed
- Bug Fixes
 - Missing ToString() on UUID() and StrUUID() functions (CORE-427)
 - Fix bug with parsing BIND inside complex nested graph patterns (CORE-428)
 - Fix bug with RDF/XML output under MonoTouch (CORE-431)
- Build
 - Ensure AssemblyVersion is synchronised properly with NuGet package versions (CORE-426)
 - Remove MSBuild integrated NuGet package restore
- Dependencies
 - Upgrade VDS.Common to 1.4.0
 - Upgrade Json.Net to 6.0.6
 - Upgrade HtmlAgilityPack to 1.4.9

1.0.6
-----

Changed
- Bug Fixes
 - Fix bug in overly strict SPARQL Results JSON parsing (CORE-419)
 - Fix bug with incorrect sub-query evaluation (CORE-420)
 - Fix bug where NQuadsWriter may omit graph names when the data was inserted via SPARQL Updates (CORE-421)
 - Fix bug parsing SPARQL Results JSON where data is in unexpected order (CORE-423)
 - Fix possible NPE when running updates with a custom query processor
 - Fix for Stardog 2.2 reasoning support

1.0.5
-----

Changed
- Bug Fixes